# polyjuice

./: .gitignore  .travis.yml  README.md  UNLICENSE.txt  pyproject.toml
polyjuice/: __init__.py  errors.py  fields.py  meta.py  options.py  related_fields.py
tests/: test_fields.py  test_meta.py  test_model.py  test_options.py  test_related_fields.py
tests/integration/hogwarts/: manage.py
tests/integration/hogwarts/hogwarts/: settings.py  urls.py  wsgi.py
tests/integration/hogwarts/houses/: apps.py  models.py
tests/integration/hogwarts/houses/migrations/: 0001_initial.py
tests/integration/hogwarts/potions/: apps.py  models.py
tests/integration/hogwarts/potions/migrations/: 0001_initial.py
tests/integration/hogwarts/professors/: apps.py  models.py
tests/integration/hogwarts/professors/migrations/: 0001_initial.py
