[tool.poetry]
name = "polyjuice"
version = "0.1.0"
description = "SQLAlchemy tables disguised as Django models."
authors = ["ducdetronquito <guillaume.paulet@giome.fr>"]

readme = "README.md"
repository = "https://github.com/ducdetronquito/polyjuice"
homepage = "https://github.com/ducdetronquito/polyjuice"
keywords = ["Django", "SQLAlchemy"]

[tool.poetry.dependencies]
python = "^3.6"
django = "2.2.*"
sqlalchemy = "1.3.*"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
